--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FakeHawkTuah | Memecoin</title>
+  <title>JingleCoin | Memecoin Fun</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>FakeHawkTuah</h1>
-    <p>The memecoin that flies high on the Solana blockchain.</p>
+    <h1>JingleCoin</h1>
+    <p>The holiday memecoin spreading cheer on the Solana blockchain!</p>
   </header>
   <nav>
     <a href="#about">About</a>
@@ -17,16 +17,16 @@
     <a href="#community">Community</a>
   </nav>
   <section id="about">
-    <h2>About FakeHawkTuah</h2>
-    <p>FakeHawkTuah is a memecoin inspired by the legendary figure, Tuah, reimagined for the blockchain era. Ride the wave of memes and fun on Solana!</p>
+    <h2>About JingleCoin</h2>
+    <p>JingleCoin is here to add a festive twist to the crypto world. Ride the sleigh of memes and fun on the Solana network!</p>
   </section>
   <section id="roadmap">
     <h2>Roadmap</h2>
     <ul>
-      <li>🚀 Token Launch on Pump.fun</li>
-      <li>🌐 Build the community</li>
-      <li>🎨 Launch NFT giveaways</li>
-      <li>🔥 Meme contests and more!</li>
+      <li>🎉 Token Launch on Pump.fun</li>
+      <li>🌟 Build a vibrant community</li>
+      <li>🎁 NFT drops and giveaways</li>
+      <li>🥳 Meme contests and events</li>
     </ul>
   </section>
   <section id="community">
@@ -36,7 +36,7 @@
     <a href="#" target="_blank">Twitter</a>
   </section>
   <footer>
-    <p>&copy; 2024 FakeHawkTuah. All rights reserved.</p>
+    <p>&copy; 2024 JingleCoin. All rights reserved.</p>
   </footer>
 </body>
 </html>
